--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -551,7 +551,7 @@ window.fetchStops = async function(latitude, longitude) {
     }
 }
   
-  window.fetchAmenity = function(latitude, longitude) {
+window.fetchAmenity = function(latitude, longitude) {
     return new Promise((resolve, reject) => {
         const checkCoordinates = () => {
             if (typeof latitude !== "undefined" && typeof longitude !== "undefined" && latitude !== 0 && longitude !== 0) {
@@ -566,6 +566,7 @@ window.fetchStops = async function(latitude, longitude) {
         // Construct Overpass API query to find the first amenity within 100 meters
         var overpassQuery = "https://overpass-api.de/api/interpreter?data=[out:json];node(around:100," + latitude + "," + longitude + ")[amenity];out body qt 1;";
         // Fetch data from Overpass API
+      console.log(overpassQuery);
         return fetch(overpassQuery);
     })
     .then((response) => response.json())
@@ -587,7 +588,34 @@ window.fetchStops = async function(latitude, longitude) {
     });
 };
 
- window.fetchJSONFile = async function(filename, cachedVariable) {
+  
+window.fetchCity = function(latitude, longitude) {
+  const format = "json"; // You can specify the format as json
+
+  // Construct the URL for the Nominatim reverse geocoding API
+  const apiUrl = `https://nominatim.openstreetmap.org/reverse?format=${format}&lat=${latitude}&lon=${longitude}`;
+
+  // Make a GET request to the Nominatim reverse geocoding API
+  return fetch(apiUrl)
+    .then(response => response.json())
+    .then(data => {
+      // Check if the response contains any results
+      if (data && data.address) {
+        const city = data.address.city || data.address.town || data.address.village || data.address.hamlet;
+        const neighborhood = data.address.neighbourhood || data.address.suburb || data.address.locality;
+        
+        return { city, neighborhood }; // Return an object containing city and neighborhood 
+        
+      } else {
+        console.error("No results found");
+      }
+    })
+    .catch(error => {
+      console.error("Error fetching data: " + error.message);
+    });
+};
+
+window.fetchJSONFile = async function(filename, cachedVariable) {
     try {
         if (!cachedVariable) {
             const response = await fetch(filename);
@@ -776,9 +804,10 @@ Promise.all([
   fetchAmenity(avatar_latitude, avatar_longitude),
   fetchAmenity(hachi_latitude, hachi_longitude),
   fetchStops(avatar_latitude, avatar_longitude),
-  fetchStops(hachi_latitude, hachi_longitude)
+  fetchStops(hachi_latitude, hachi_longitude),
+  fetchCity(avatar_latitude, avatar_longitude)
 ])
-.then(([weatherDescription, avatarStreetName, hachiStreetName, avatarSpeed, hachiSpeed, avatarAmenity, hachiAmenity,avatarStop, hachiStop]) =&gt; {
+.then(([weatherDescription, avatarStreetName, hachiStreetName, avatarSpeed, hachiSpeed, avatarAmenity, hachiAmenity,avatarStop, hachiStop, cityNeighborhood]) =&gt; {
   variables().storyWeather = weatherDescription;
   writeToAvatar(&#39;avatar_street&#39;, avatarStreetName);
   writeToHachi(&#39;hachi_street&#39;, hachiStreetName);
@@ -793,6 +822,8 @@ Promise.all([
   variables().hachi_t_stop=hachiStop.stopName;
   variables().hachi_t_route=hachiStop.routeShortName;
   variables().hachi_t_heading=hachiStop.tripHeadSign;
+  variables().storyCity = cityNeighborhood.city;
+  variables().storyNeighborhood = cityNeighborhood.neighborhood;
 
   console.log(&quot;Time of day is: &quot; + variables().storyTime);
   console.log(&quot;Avatar walking speed is: &quot; + variables().avatar_speed);
@@ -805,10 +836,13 @@ Promise.all([
   console.log(&quot;Hachi transit closest stop is: &quot; +  variables().hachi_t_stop);
   console.log(&quot;Hachi transit heading: &quot; +   variables().hachi_t_heading);
   console.log(&quot;Hachi transit route: &quot; +  variables().hachi_t_route);
+  console.log(&quot;Story city: &quot; + variables().storyCity);
+  console.log(&quot;Story neighborhood: &quot; + variables().storyNeighborhood);
 })
 .catch((error) =&gt; {
   console.error(&quot;Error:&quot;, error.message);
 });
+
 &lt;&lt;/script&gt;&gt;
 
 Ok!
@@ -938,7 +972,6 @@ Loading variables...
 &lt;&lt;repeat 20000ms&gt;&gt;
 &lt;&lt;script&gt;&gt;
 Promise.all([
-  fetchWeather(avatar_latitude, avatar_longitude),
   fetchStreetName(avatar_latitude, avatar_longitude),
   fetchStreetName(hachi_latitude, hachi_longitude),
   fetchSpeed(avatar_speed),
@@ -949,7 +982,6 @@ Promise.all([
   fetchStops(hachi_latitude, hachi_longitude)
 ])
 .then(([weatherDescription, avatarStreetName, hachiStreetName, avatarSpeed, hachiSpeed, avatarAmenity, hachiAmenity,avatarStop, hachiStop]) =&gt; {
-  variables().storyWeather = weatherDescription;
   writeToAvatar(&#39;avatar_street&#39;, avatarStreetName);
   writeToHachi(&#39;hachi_street&#39;, hachiStreetName);
   variables().storyTime = getTimeOfDay();
@@ -964,7 +996,6 @@ Promise.all([
   variables().hachi_t_route=hachiStop.routeShortName;
   variables().hachi_t_heading=hachiStop.tripHeadSign;
 
-  console.log(&quot;Time of day is: &quot; + variables().storyTime);
   console.log(&quot;Avatar walking speed is: &quot; + variables().avatar_speed);
   console.log(&quot;Hachi walking speed is: &quot; + variables().hachi_speed);
   console.log(&quot;Avatar closest amenity is: &quot; + variables().avatar_amenity);
@@ -1877,9 +1908,9 @@ $avatar_passage
 &lt;&lt;liveblock&gt;&gt;
 	&lt;&lt;include &quot;evalDist_hachi&quot;&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
+
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;hachi&#39;,&#39;observes&#39;);
-console.log(variables().hachi_comment);
 &lt;&lt;/script&gt;&gt;
 
 &lt;&lt;live $hachi_comment&gt;&gt;
@@ -2113,9 +2144,9 @@ if (window.$avatar_comment !== window._prevAvatarComment) {
 &lt;&lt;liveblock&gt;&gt;
 	&lt;&lt;include &quot;evalDist_hachi&quot;&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
+
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;hachi&#39;,&#39;observes&#39;);
-console.log(variables().hachi_comment);
 &lt;&lt;/script&gt;&gt;
 
 &lt;&lt;live $hachi_comment&gt;&gt;
