--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -594,7 +594,7 @@ window.fetchAmenity = function(latitude, longitude) {
             }
         }
         // If no amenity is found, throw an error.
-        throw new Error("No amenity found nearby");
+        //throw new Error("No amenity found nearby");
     	return "an odd window";
     })
     .catch((error) => {
