--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 									directionText = "northwest";
 								}
 							} else {
-								directionText = "";
+								directionText = "somewhere";
 							}
 							checkCheckpoints();
 							// Update the HTML element with different navigation variables
