--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -594,7 +594,6 @@ window.fetchStops = async function(latitude, longitude) {
       return {
         tripHeadSign: "to the airport",
         routeShortName: "six",
-        departureTime: "soon",
         stopName: "closest"
       };
   }
@@ -2000,6 +1999,7 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
 
 &lt;&lt;liveblock&gt;&gt;
 &lt;&lt;if $hachi_checkpoint == &quot;hachi_statue&quot;&gt;&gt;
+	&lt;&lt;script&gt;&gt;stopComments(`hachi`)&lt;&lt;/script&gt;&gt;
   &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   	&lt;&lt;include &quot;hachi_act1_1&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
