--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
 				let lastSpokenMessage = '';
 				let speaking = false;
 
-				async function speakMessage2(fullMessage) {
+				async function speakMessage(fullMessage) {
 					// Check if the message is the same as the last spoken message
 					if (fullMessage === lastSpokenMessage) {
 						console.log("Message already spoken.");
@@ -784,7 +784,7 @@
 						return;
 					}
 
-					const url = `http://172.26.7.86:5002/api/tts?text=${encodeURIComponent(fullMessage)}&speaker_id=p323&style_wav=&language=en`;
+					const url = `http://147.251.58.149:5002/api/tts?text=${encodeURIComponent(fullMessage)}&speaker_id=p323&style_wav=&language=en`;
 
 					try {
 						// Make a fetch request to the Coqui TTS API
@@ -825,7 +825,7 @@
 				}
 
 
-				function speakMessage(fullMessage) {
+				function speakMessage2(fullMessage) {
 				// Check if the message is the same as the last spoken message
 					if (fullMessage === lastSpokenMessage) {
 						console.log("Message already spoken.");
