--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
 				let lastSpokenMessage = '';
 				let speaking = false;
 
-				async function speakMessage2(fullMessage) {
+				async function speakMessage(fullMessage) {
 					// Check if the message is the same as the last spoken message
 					if (fullMessage === lastSpokenMessage) {
 						console.log("Message already spoken.");
@@ -825,7 +825,7 @@
 				}
 
 
-				function speakMessage(fullMessage) {
+				function speakMessage2(fullMessage) {
 				// Check if the message is the same as the last spoken message
 					if (fullMessage === lastSpokenMessage) {
 						console.log("Message already spoken.");
