--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
 						return;
 					}
 
-					const url = `https://s4us-tts.fi.muni.cz:5002/api/tts?text=${(fullMessage)}&speaker_id=p323&style_wav=&language=en`;
+					const url = `https://s4us-tts.fi.muni.cz:5002/api/tts?text=${(fullMessage)}&speaker_id=&style_wav=&language=en`;
 
 					try {
 						// Make a fetch request to the Coqui TTS API
