--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
 						return; // Exit the function without speaking again
 					}
 					// Check if currently speaking
-					if (speaking) {
+					if (speaking || audio.play()) {
 						console.log("Already speaking, new message ignored.");
 						return;
 					}
