--- a/index.html
+++ b/index.html
@@ -774,6 +774,7 @@
 				// Variable to store the last spoken message
 				let lastSpokenMessage = '';
 				let speaking = false;
+				let currentAudio = null;
 
 				const transliterationMap = {
 					'á': 'a', 'à': 'a', 'ä': 'a', 'ã': 'a', 'â': 'a', 'å': 'a', 'č': 'tch','æ':'ae',
