--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 		</div>
 		<div id="avatarBTdiv">
 			<!-- Connect Button. -->
-			<button id="connectButton" class="button" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('Connecting')">
+			<button
+				id="connectButton"
+				class="button"
+				disabled
+				onclick="connecting_Sound.play(), wakeLock(), speakMessage ('Connecting'), displayText('Connecting')"
+			>
 				<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
 			</button>
 		</div>
